[project]
name = "rain-classroom-assistant"
version = "0.1.0"
description = "Rain Classroom Assistant Mobile App"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
dependencies = [
    "flet==0.28.3",
    "flet-audio==0.2.2",
    "flet-video==0.1.2",
    "requests",
    "websocket-client",
    "python-dotenv",
]

[tool.flet]
android_permissions = ["INTERNET", "WAKE_LOCK", "FOREGROUND_SERVICE"]
