[project]
name = "rain-classroom-assistant"
version = "0.2.0"
description = "Rain Classroom Assistant Mobile App"
authors = [
    {name = "Casual", email = "baidu2198@gmail.com"},
]
dependencies = [
    "flet==0.81.0",
    "flet-audio==0.81.0",
    "flet-video==0.81.0",
    "requests",
    "websocket-client",
    "python-dotenv",
]

[tool.flet]
android_permissions = ["INTERNET", "WAKE_LOCK", "FOREGROUND_SERVICE"]
